extends CanvasLayer

var ary = []

func _on_0_pressed():
	var ary0 = ['0']
	ary.append_array(ary0)
	$Panel/LineEdit.text = ''
	
	
	pass # Replace with function body.
func _on_1_pressed():
	$Panel/LineEdit.text = '1'
	pass # Replace with function body.
func _on_2_pressed():
	pass # Replace with function body.
func _on_3_pressed():
	pass # Replace with function body.
func _on_4_pressed():
	pass # Replace with function body.
func _on_5_pressed():
	pass # Replace with function body.
func _on_6_pressed():
	pass # Replace with function body.
func _on_7_pressed():
	pass # Replace with function body.
func _on_8_pressed():
	pass # Replace with function body.
func _on_9_pressed():
	pass # Replace with function body.
